<resources>
    <string name="app_name">Weather Details</string>
    <string name="city_zipcode">Enter city name or zip code</string>
    <string name="submit">Submit</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="data_not_available">Data not available please try with different zipcode or city name\n</string>
    <string name="enter_input">Please enter city or zipcode</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="weather">Weather</string>
    <string name="today_s_temperature">today\'s Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">"Max Temp"</string>
    <string name="km_h">Km/h</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="location_not_found">Unable to get current location please enable gps</string>
    <string name="no_data_for_current_location">No data found for current location</string>
    <string name="please_wait">Please wait</string>
    <string name="percentage">%</string>
    <string name="png">.png</string>
    <string name="c">C</string>
    <string name="f">F</string>
</resources>