<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.WeatherInfoActivity">


    <EditText
        android:id="@+id/etQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/box_border"
        android:hint="@string/city_zipcode"
        android:letterSpacing="0.08"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:letterSpacing="0.20"
        android:text="@string/submit" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeatherDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivWeather"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toTopOf="@+id/tlDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/current_temperature"
                android:letterSpacing="0.10"
                android:padding="6dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tlDetails"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivWeather"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/swTempUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:showText="true"
                android:textOff="@string/c"
                android:textOn="@string/f"
                app:layout_constraintBottom_toTopOf="@+id/tlDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintTop_toTopOf="parent">

            </Switch>

            <TableLayout
                android:id="@+id/tlDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivWeather">


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Table_Custom_Text"
                        android:text="@string/weather" />

                    <TextView
                        android:id="@+id/tvWeatherCondition"
                        style="@style/Table_Custom_Text"
                        android:hint="@string/weather" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Table_Custom_Text"
                        android:text="@string/min_temp" />


                    <TextView
                        android:id="@+id/tvMinTemperature"
                        style="@style/Table_Custom_Text"
                        android:hint="@string/min_temp" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Table_Custom_Text"
                        android:text="@string/max_temp" />

                    <TextView
                        android:id="@+id/tvMaxTemperature"
                        style="@style/Table_Custom_Text"
                        android:hint="@string/max_temp" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Table_Custom_Text"
                        android:text="@string/humidity" />


                    <TextView
                        android:id="@+id/tvHumidity"
                        style="@style/Table_Custom_Text"
                        android:hint="@string/humidity" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Table_Custom_Text"
                        android:text="@string/wind_speed" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        style="@style/Table_Custom_Text"
                        android:hint="@string/wind_speed" />

                </TableRow>

            </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
